Hero Section Css Done

--- a/Website 1/HomePage/homepage.html
+++ b/Website 1/HomePage/homepage.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clone 1 - S I D</title>
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="homepage.css" />
+    <link rel="shortcut icon" href="../Assets/star.png" type="image/x-icon" />
     <script defer src="homepage.js"></script>
-</head>
-<body>
+  </head>
+  <body>
+    <!--Sid:  header Starts here -->
     <header class="header">
-        <nav class="navbar">
-
-            <div class="logo">
-                <img src="" alt="logo">
-            </div>
-            <div class="services">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Services</a>
-                <a href="">Products</a>
-                <a href="">Contact us</a>
-            </div>
-            <div class="hero-btn">
-                <button>
-                    Let's Talk
-                </button>
-            </div>
-
-        </nav>
-
+      <nav class="navbar">
+        <div class="logo">
+          <img src="../Assets/logosid1.png" alt="logo" />
+        </div>
+        <div class="services">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Services</a>
+          <a href="">Products</a>
+          <a href="">Contact Us</a>
+        </div>
+        <div class="hero-btn">
+          <button>
+            <p>Let's Talk</p>
+            <span>
+              <svg
+                aria-hidden="true"
+                viewBox="0 0 448 512"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
+                ></path>
+              </svg>
+            </span>
+          </button>
+        </div>
+      </nav>
     </header>
+    <!--Sid:  header Ends here -->
+    <!--Note:  Main Div(With Form) Starts here -->
+    <div class="main">
+      <div class="data">
+        <p class="data-title">Website</p>
+        <p class="data-subtitle">Development</p>
+        <p class="data-desc">
+          Unlock the Power of Web Presence with our Professional Website
+          Designing Service! Elevate Your Online Presence with Stunning Website
+          Designs.
+        </p>
+      </div>
+      
+    </div>
 
-</body>
+    <!--Note:  Main Div(With Form) Ends here -->
+  </body>
 </html>
