Added On scroll Animation on card

--- a/Website 1/HomePage/homepage.html
+++ b/Website 1/HomePage/homepage.html
@@ -26,15 +26,7 @@
           <button>
             <p>Let's Talk</p>
             <span>
-              <svg
-                aria-hidden="true"
-                viewBox="0 0 448 512"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
-                ></path>
-              </svg>
+              <svg aria-hidden="true" class="e-font-icon-svg e-fas-arrow-up" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg"><path d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"></path></svg>
             </span>
           </button>
         </div>
@@ -92,7 +84,7 @@
             <img src="../Assets/card-logo2.png" alt="" />
             <div class="card-arrow">&#8599;</div>
           </div>
-          <p>Website Development</p>
+          <p>App Development</p>
           <div class="card-img">
             <img src="../Assets/Services-card1.jpg" alt="" />
           </div>
@@ -102,7 +94,7 @@
             <img src="../Assets/card-logo3.png" alt="" />
             <div class="card-arrow">&#8599;</div>
           </div>
-          <p>Website Development</p>
+          <p>Content Creation</p>
           <div class="card-img">
             <img src="../Assets/Services-card1.jpg" alt="" />
           </div>
@@ -112,7 +104,7 @@
             <img src="../Assets/card-logo4.png" alt="" />
             <div class="card-arrow">&#8599;</div>
           </div>
-          <p>Website Development</p>
+          <p>Game Development</p>
           <div class="card-img">
             <img src="../Assets/Services-card1.jpg" alt="" />
           </div>
