Added Topup Btn

--- a/Website 1/HomePage/homepage.html
+++ b/Website 1/HomePage/homepage.html
@@ -39,11 +39,22 @@
             </span>
           </button>
         </div>
+
+        <div class="harburger-menu">
+          
+
+        </div>
+
+
+
+
+
+
       </nav>
     </header>
     <!--Sid:  header Ends here -->
     <!--Note:  Main Div(With Form) Starts here -->
-    <div class="main">
+    <div class="main" >
       <div class="data">
         <p class="data-title">S I D D H A R T H</p>
         <p class="data-subtitle">D E V</p>
@@ -56,6 +67,10 @@
     </div>
 
     <!--Note:  Main Div(With Form) Ends here -->
+
+
+
+
 
     <!--Note:  Services Div(With Form) Starts here -->
 
@@ -212,6 +227,10 @@
 
     <!-- Note :Whatsapp Floating Btn Ends here -->
 
+
+
+<!-- Sid: Work With me Section  Starts Here-->
+
     <div class="work-with-me">
       <div class="header-arrow">
         <img src="../Assets/arrow.png" alt="arrow" />
@@ -227,6 +246,20 @@
         <p class="work-bg-text">Let's Work Together</p>
       </div>
     </div>
+
+<!-- Sid: Work With me Section  Starts Here-->
+<!-- !: Floating Top Btn Section  Starts Here-->
+<div onclick='window.scrollTo({top: 0, behavior: "smooth"});' class="topup-btn">
+&#10132;
+
+</div>
+
+<!-- !: Floating Top Btn Section  Starts Here-->
+
+
+
+
+
 
     <footer>
       <div class="footer">
